--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "back": "nodemon backend/index.js"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/bun": "latest",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^5.0.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/node": "^22.9.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "concurrently": "^9.0.1",
@@ -23,6 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "tsc-node": "^0.0.3"
   }
 }
